espside/build/log/idf_py_stdout_output_14980
[1/14] Linking C static library esp-idf/mqtt/libmqtt.a
[2/14] Linking C static library esp-idf/spiffs/libspiffs.a
[3/14] Linking C static library esp-idf/fatfs/libfatfs.a
[4/14] Linking C static library esp-idf/wifi_provisioning/libwifi_provisioning.a
[5/14] Performing build step for 'bootloader'
[1/1] cd /home/zsombor/code/esp/oscilloscope/build/bootloader/esp-idf/esptool_py && /home/zsombor/.espressif/python_env/idf5.3_py3.13_env/bin/python /opt/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/zsombor/code/esp/oscilloscope/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[6/14] No install step for 'bootloader'
[7/14] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi_teszt.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/wifi_teszt.c.obj 
/home/zsombor/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/zsombor/code/esp/oscilloscope/build/config -I/home/zsombor/code/esp/oscilloscope/main -I/opt/esp-idf/components/newlib/platform_include -I/opt/esp-idf/components/freertos/config/include -I/opt/esp-idf/components/freertos/config/include/freertos -I/opt/esp-idf/components/freertos/config/xtensa/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/opt/esp-idf/components/freertos/esp_additions/include -I/opt/esp-idf/components/esp_hw_support/include -I/opt/esp-idf/components/esp_hw_support/include/soc -I/opt/esp-idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp-idf/components/esp_hw_support/dma/include -I/opt/esp-idf/components/esp_hw_support/ldo/include -I/opt/esp-idf/components/esp_hw_support/port/esp32/. -I/opt/esp-idf/components/esp_hw_support/port/esp32/include -I/opt/esp-idf/components/heap/include -I/opt/esp-idf/components/log/include -I/opt/esp-idf/components/soc/include -I/opt/esp-idf/components/soc/esp32 -I/opt/esp-idf/components/soc/esp32/include -I/opt/esp-idf/components/hal/platform_port/include -I/opt/esp-idf/components/hal/esp32/include -I/opt/esp-idf/components/hal/include -I/opt/esp-idf/components/esp_rom/include -I/opt/esp-idf/components/esp_rom/include/esp32 -I/opt/esp-idf/components/esp_rom/esp32 -I/opt/esp-idf/components/esp_common/include -I/opt/esp-idf/components/esp_system/include -I/opt/esp-idf/components/esp_system/port/soc -I/opt/esp-idf/components/esp_system/port/include/private -I/opt/esp-idf/components/xtensa/esp32/include -I/opt/esp-idf/components/xtensa/include -I/opt/esp-idf/components/xtensa/deprecated_include -I/opt/esp-idf/components/lwip/include -I/opt/esp-idf/components/lwip/include/apps -I/opt/esp-idf/components/lwip/include/apps/sntp -I/opt/esp-idf/components/lwip/lwip/src/include -I/opt/esp-idf/components/lwip/port/include -I/opt/esp-idf/components/lwip/port/freertos/include -I/opt/esp-idf/components/lwip/port/esp32xx/include -I/opt/esp-idf/components/lwip/port/esp32xx/include/arch -I/opt/esp-idf/components/lwip/port/esp32xx/include/sys -I/opt/esp-idf/components/esp_netif/include -I/opt/esp-idf/components/esp_event/include -I/opt/esp-idf/components/nvs_flash/include -I/opt/esp-idf/components/spi_flash/include -I/opt/esp-idf/components/esp_partition/include -I/opt/esp-idf/components/esp_wifi/include -I/opt/esp-idf/components/esp_wifi/wifi_apps/include -I/opt/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/opt/esp-idf/components/esp_wifi/include/local -I/opt/esp-idf/components/esp_phy/include -I/opt/esp-idf/components/esp_phy/esp32/include -I/home/zsombor/code/esp/oscilloscope/components/broadcaster/include -I/home/zsombor/code/esp/oscilloscope/components/btconfig/include -I/opt/esp-idf/components/bt/include/esp32/include -I/opt/esp-idf/components/bt/common/osi/include -I/opt/esp-idf/components/bt/common/api/include/api -I/opt/esp-idf/components/bt/common/btc/profile/esp/blufi/include -I/opt/esp-idf/components/bt/common/btc/profile/esp/include -I/opt/esp-idf/components/bt/common/hci_log/include -I/opt/esp-idf/components/bt/host/bluedroid/api/include/api -I/opt/esp-idf/components/bt/porting/ext/tinycrypt/include -I/opt/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/zsombor/code/esp/oscilloscope=. -fmacro-prefix-map=/opt/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/wifi_teszt.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/wifi_teszt.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/wifi_teszt.c.obj -c /home/zsombor/code/esp/oscilloscope/main/wifi_teszt.c
/home/zsombor/code/esp/oscilloscope/main/wifi_teszt.c:37:19: error: expected identifier or '(' before ',' token
   37 |         enum modes, uint8_t  mode;
      |                   ^
/home/zsombor/code/esp/oscilloscope/main/wifi_teszt.c: In function 'app_main':
/home/zsombor/code/esp/oscilloscope/main/wifi_teszt.c:203:21: warning: unused variable 'fd' [-Wunused-variable]
  203 |                 int fd = accept(soc, (struct sockaddr *)&inaddr, &inlen);
      |                     ^~
[8/14] Completed 'bootloader'
ninja: build stopped: subcommand failed.
